fix: stars wrap

--- a/src/components/rating/rating.scss
+++ b/src/components/rating/rating.scss
@@ -1,6 +1,9 @@
 
 .rating {
     width: fit-content;
+    display: flex;
+    flex-wrap: nowrap;
+    flex-direction: row;
 }
 
 @media screen and (max-width: 800px) {
